# frosthaven-campaign-journal

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  important.txt  neil.txt  pyproject.toml  summary_initial_conversation.txt  tdd.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  decision.md  task.md
docs/: active-session-flow.md  android-release-flow.md  campaign-temporal-controls.md  campaign-temporal-initialization.md  coding-readiness-gate.md  concurrency-sync-edge-case-matrix.md  conflict-policy.md  context-checklists.md  context-governance.md  decision-log.md  domain-glossary.md  domain-invariant-test-plan.md  editability-policy.md  firestore-operation-contract.md  github-release-automation.md  minimal-read-queries.md  mvp-implementation-blocks.md  mvp-implementation-checklist.md  repo-workflow.md  resource-delta-model.md  resource-ui-catalog.md  resource-validation-recalculation.md  sync-strategy.md  system-map.md  timestamp-order-policy.md  ui-main-shell-architecture-mvs.md
learning/: frosthaven-annex.md  git-workflow-handbook.md  handbook.md  personal-context-engineering-quickstart.md  sources.md
scripts/: build-android-with-mobile-secrets.ps1  create-github-release.ps1
src/: main.py
tests/: main_shell_test_support.py  test_labeled_group_box.py  test_main_shell_center_panel.py  test_main_shell_feedback_events.py  test_main_shell_modal_overlay.py  test_main_shell_shell_view.py  test_main_shell_status_bar.py  test_main_shell_week_selection.py  test_session_timing.py
(+91 files in other folders)
